--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11419,3 +11419,17 @@ section.user_info h1 {
   border-radius: 50%;
 }
 
+/*
+user edit
+*/
+
+.gravatar_edit {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.gravatar_edit .gravatar {
+  float: none;
+  max-width: 100px;
+}
+
